# AnalyzeTradesApp

./: README.md  app.py  pyproject.toml
