[tool.poetry]
name = "analyzetradesapp"
version = "0.1.0"
description = ""
authors = ["Stanley Wang <s.wang4331@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
streamlit = "*"

[tool.poetry.dev-dependencies]
black = "*"
ipykernel = "*" # to run jupyter interactively

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
